tests/sksl/errors/OpaqueTypeAssignment.dsl.glsl
### Compilation failed:

error: global variable initializer must be a constant expression

error: variables of type 'sampler' must be global

error: variables of type 'sampler' must be global
error: opaque type 'sampler' cannot use initializer expressions

error: variables of type 'sampler' must be global

error: assignments to opaque type 'sampler' are not permitted

5 errors
